// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts#dynamodb strands-agent-connection generator > should add dynamodb serve-local dependency to agent serve-local 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-agent",
  "root": "packages/my-agent",
  "targets": {
    "agent-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`ts#dynamodb strands-agent-connection generator > should use sourceComponent name when provided 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-agent",
  "root": "packages/my-agent",
  "targets": {
    "custom-agent-serve-local": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "serve-local",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
